cambiado de titulo a parrafo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 		</head>
 		<BODY>
 			<h1>Bienvenido</h1>
-			<h2>Estamos probando el git</h2>
+			<p>Estamos probando el git</p>
 		</BODY>
 </html>
